feat: implement real-time ws broadcast, mark-as-read, and initial-based avatars